# forecasting-app-2

./: BACKEND_STACK_RESEARCH.md  CLAUDE.md  E2E_TEST_STATUS.md  IMPROVEMENTS.md  README.md  TESTING.md
.claude/: settings.local.json
backend/: forecasts.db  pyproject.toml  seed_data.py  start.bat  start.sh  tmpclaude-7db8-cwd  update_departments.py
backend/src/: forecasts.db  init_db.py  main.py
backend/src/api/routes/: departments.py  forecasts.py  projects.py  snapshots.py
backend/src/config/: database.py
backend/src/models/: database.py  schemas.py
backend/src/repositories/: forecast_repository.py
backend/src/services/: forecast_transformation.py
backend/tests/: conftest.py  test_departments_projects_api.py  test_forecasts_api.py  test_snapshots_api.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  test-output.txt  test-results.txt  tmpclaude-c84f-cwd
frontend/.claude/: settings.local.json
frontend/playwright-report/: index.html
frontend/src/: App.css
frontend/src/pages/: Dashboard.css  Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/utils/: mockData.ts
frontend/test-results/: .last-run.json  results.json
frontend/test-results/filtering-aggregation-Filt-0b4e0-artment-count-in-statistics-chromium/: video.webm
frontend/test-results/filtering-aggregation-Filt-5a385-y-filter-results-gracefully-chromium/: error-context.md  video.webm
frontend/tests/e2e/: bulk-snapshot-submission.spec.ts  (+5 more)
specs/001-spending-forecast-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+40 files in other folders)
